--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <a class="dropdown-item" href="Balance.html"><i class="ti-wallet m-r-5 m-l-5"></i> My Balance</a>
                                 
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="Setting.html"><i class="ti-settings m-r-5 m-l-5"></i> Account Setting</a>
+                                <a class="dropdown-item" href="Setting.html"><i class="ti-settings m-r-5 m-l-5"></i> Rate Setting</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="login.html"><i class="fa fa-power-off m-r-5 m-l-5"></i> Logout</a>
                                 <div class="dropdown-divider"></div>
