--- a/CreateUser.html
+++ b/CreateUser.html
@@ -43,7 +43,7 @@
                 <div>
                     <div class="text-center p-t-20 p-b-20">
                         <span class="db">
-                            <img src="../../assets/images/logo-icon.png" style="padding: 5px "><img src="../../assets/images/logo-text.png" alt="logo" /></span>
+                            <img src="../../assets/images/fruit-logo.png" height=80 width=350></span>
                     </div>
                     <!-- Form -->
                     <form class="form-horizontal m-t-20" action="index.html">
