--- a/login.html
+++ b/login.html
@@ -42,8 +42,7 @@
             <div class="auth-box bg-dark border-top border-secondary">
                 <div>
                     <div class="text-center p-t-20 p-b-20">
-                        <span class="db">
-                            <img src="../../assets/images/logo-icon.png" style="padding: 5px "><img src="../../assets/images/logo-text.png" alt="logo" /></span>
+                        <img src="../../assets/images/fruit-logo.png" height=80 width=350>
                     </div>
                     <!-- Form -->
                     <form class="form-horizontal m-t-20" action="index.html">
