--- a/forgot.html
+++ b/forgot.html
@@ -42,7 +42,8 @@
             <div class="auth-box bg-dark border-top border-secondary">
                 <div>
                     <div class="text-center p-t-20 p-b-20">
-                        <img src="../../assets/images/fruit-logo.png" height=80 width=350>
+                        <span class="db">
+                            <img src="../../assets/images/fruit-logo.png" height=80 width=350></span>
                     </div>
                     <!-- Form -->
                     <form class="form-horizontal m-t-20" action="index.html">
@@ -55,13 +56,23 @@
                                     <input type="text" class="form-control form-control-lg" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required>
                                 </div>
                                 <!-- email -->
-                                
-                                
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text bg-danger text-white" id="basic-addon1"><i class="ti-email"></i></span>
+                                    </div>
+                                    <input type="email" class="form-control form-control-lg" placeholder="Email Address" aria-label="Username" aria-describedby="basic-addon1" required>
+                                </div>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text bg-warning text-white" id="basic-addon2"><i class="ti-pencil"></i></span>
+                                    </div>
+                                    <input type="password" class="form-control form-control-lg" placeholder="New Password" aria-label="Password" aria-describedby="basic-addon1" required>
+                                </div>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text bg-info text-white" id="basic-addon2"><i class="ti-pencil"></i></span>
                                     </div>
-                                    <input type="password" class="form-control form-control-lg" placeholder=" Password" aria-label="Password" aria-describedby="basic-addon1" required>
+                                    <input type="password" class="form-control form-control-lg" placeholder=" Confirm Password" aria-label="Password" aria-describedby="basic-addon1" required>
                                 </div>
                             </div>
                         </div>
@@ -69,8 +80,7 @@
                             <div class="col-12">
                                 <div class="form-group">
                                     <div class="p-t-20">
-                                        <button class="btn btn-block btn-lg btn-info" type="submit">Sign in</button>
-                                        <h5><a href="forgot.html">forgot password</a></h5>
+                                        <button class="btn btn-block btn-lg btn-info" type="submit">Submit</button>
                                     </div>
                                 </div>
                             </div>
