--- a/Sbal.html
+++ b/Sbal.html
@@ -296,7 +296,7 @@
                                                       <div class="modal-dialog">
                                                           <div class="modal-content modalstyle">
                                                               <div class="modal-header">
-                                                              <h4>Due Details</h4>
+                                                              <h4>Balance Details</h4>
                                                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                                                               </div>
                                                               <div class="modal-body container">
